--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <title>Web Calculator</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="assets/bootstrap-4.0.0-dist/css/bootstrap.css">
+<!--   <link rel="stylesheet" href="assets/bootstrap-4.0.0-dist/css/bootstrap.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="assets/bootstrap-4.0.0-dist/js/bootstrap.min.js"></script>
+<!--   <script src="assets/bootstrap-4.0.0-dist/js/bootstrap.min.js"></script> -->
 </head>
 <style>
 img{
